fix(table): Allow wrapping text in table-header and table-cell (#7665)
## Summary
Adds styles to allow long text in header or table cell to wrap. Adds
story.

--- a/packages/calcite-components/src/components/table-cell/table-cell.scss
+++ b/packages/calcite-components/src/components/table-cell/table-cell.scss
@@ -26,7 +26,7 @@
 }
 
 td {
-  @apply text-start focus-base align-middle text-color-1;
+  @apply text-start focus-base align-middle text-color-1 whitespace-normal;
   background: var(--calcite-internal-table-cell-background);
   border-inline-end: 1px solid var(--calcite-ui-border-3);
   font-size: var(--calcite-internal-table-cell-font-size);
